# fastly-injection-detector

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: edge-inference-prompt-injection-detection-paper.md  experiment-tracking.md
docs/architecture/: cloud-training.md  project-structure.md
hf_publish/: NOTICE  README.md  config.json  tokenizer_config.json
hf_publish/deployment/fastly/: README.md  calibrated_thresholds.json
hf_publish/eval/: metrics.json  slices.json
ml/cloud/: Dockerfile  README.md  config.yaml  config_injection_only.yaml  config_jailbreak.yaml  entrypoint.py  job_status.py  precache_models.py  submit.py
ml/cloud/tests/: test_job_status.py
ml/data/: README.md  analyze_truncation.py  audit_source.py  build.py  eval_utils.py  requirements.txt
ml/data/loaders/: load_edge_case.py
ml/data/manual/: README.md  edge_case_corpus_v1.jsonl
ml/data/recipes/: legacy-v0-sources.md  pi_mix_v1.yaml  pi_mix_v2.yaml  pi_mix_v3.yaml  source-audits.md
ml/data/tests/: conftest.py  test_eval_math.py  test_loaders.py  test_manifest.py  test_splits.py
ml/experiments/coral/: .gitignore  Makefile  README.md  ci_gate_edge_tpu.py  export_ffn_delta.py  export_ffn_delta_simple.py  inference_harness.py  requirements_coral.txt  runtime_integration.py  setup_coral.sh  setup_target_env.sh  verify_delta_models.py
ml/experiments/coral/linux_host/: setup_coral_rpi4.sh
ml/export/: README.md  export_onnx.py  package_fp16.py  quantize_int8.py
ml/training/: README.md  benchmark_granite_guardian_jailbreak_teacher.py  compare_runs.py  config_runtime.py  debug_datasets.py  eval_ood.py  requirements.txt  run_distillation.sh  slice_metrics.py  teacher_cache.py  test_quick.sh  test_setup.py  train_cls.py  trainer_ext.py
ml/training/config/: model.yaml  model_jailbreak.yaml
ml/training/tests/: test_config_runtime.py  test_dynamic_padding.py  test_granite_guardian_benchmark.py  test_label_smoothing.py  test_precision_modes.py  test_teacher_cache.py  test_truncation_and_slices.py
scripts/: bench_latency.py  demo.sh  deploy.sh  eval_endpoint.py  rollback.sh
service/: Cargo.toml  fastly.toml
service/.cargo/: config.toml
service/assets/: calibrated_thresholds.json
service/src/: classify_tract_simple.rs  main.rs
(+17 files in other folders)
