[package]
name = "injection-detector"
version = "0.1.0"
edition = "2021"
publish = false


[features]
# Default build compiles a stub classifier without pulling heavy ML dependencies.
default = []
# Enable this feature to embed the model and perform real inference via tract.
inference = ["dep:tokenizers", "dep:tract-onnx", "dep:ndarray"]
# Enable this feature to compile in the wizer.initialize export for Wizer pre-initialization.
# The export is safe to leave in production WASM — Fastly ignores unknown exports.
wizer-init = []

[dependencies]
fastly = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
# The MIME crate is used to set response content types.
mime = "0.3"

# Dependencies used only when `inference` is enabled.  They are optional so
# that stub builds compile quickly.
tokenizers = { version = "0.15", optional = true, default-features = false, features = ["unstable_wasm"] }
# Use tract for ONNX inference with better WASM compatibility
tract-onnx = { version = "0.21", optional = true, default-features = false }
ndarray = { version = "0.16", optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
